@@ -1,1 +1,1 @@
-#define NAIM_SNAPSHOT "-2005-11-17-1410 (development snapshot)"
+#define NAIM_SNAPSHOT ""
